# sonos-palantir

./: .gitignore  CLAUDE.md  README.md  dream_features.md  sonos_project.md  todo.md
daemon/: config.yaml  pyproject.toml
daemon/sonosd/: models.py  podcast.py  server.py  sonos.py
daemon/sonosd.egg-info/: SOURCES.txt  requires.txt  top_level.txt
daemon/tests/: test_detect_source.py  test_podcast.py  test_server.py  test_sonos.py
docs/plans/: 2026-02-27-group-toggle-design.md  2026-02-27-group-toggle.md  2026-02-27-palantir-features-design.md  2026-02-27-palantir-features.md  2026-02-27-sonos-tui-design.md  2026-02-27-sonos-tui.md  2026-02-27-todo-features.md  2026-03-02-podcast-listener-design.md  2026-03-02-podcast-listener.md  2026-03-02-tui-redesign-design.md  2026-03-02-tui-redesign.md
tui/: Cargo.toml
tui/src/: api.rs  app.rs  command.rs  history.rs  main.rs  ui.rs
