[project]
name = "sonosd"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "soco>=0.30",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
sonosd = "sonosd.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
